--- a/Hovos/Info.plist
+++ b/Hovos/Info.plist
@@ -75,5 +75,7 @@
 	<string>Used to fetch near by Hosts.</string>
 	<key>NSLocationUsageDescription</key>
 	<string>Used to fetch near by Hosts.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Used to fetch near by Hosts.</string>
 </dict>
 </plist>
